# autonomous-edge-ingestion-pipeline

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_REVIEW.md  Dockerfile  GCP_INVENTORY.md  README.md  deep_sync_results.txt  dsie_core.py  fanduel_extracted_debug.txt  firestore.indexes.json  firestore.rules  gcp_audit_results.txt  package-lock.json  pyproject.toml  requirements.txt  run.sh  test_governance.py  verify_refactor_v2.py
archive/: worker_chickenstats_legacy.py  worker_datagolf_legacy.py  worker_esports_legacy.py  worker_fbref_legacy.py  worker_fd_legacy.py  worker_graphql_legacy.py  worker_hydration_legacy.py  worker_legacy_archived.py  worker_nbastuffer_legacy.py  worker_nflpenalties_legacy.py  worker_nflverse_legacy.py  worker_nhl_legacy.py  worker_noaa_legacy.py  worker_platform_legacy.py  worker_pp_legacy.py  worker_probe_legacy.py  worker_rotogrinders_legacy.py  worker_scorekeeper_legacy.py  worker_sec_legacy.py  worker_sic_legacy.py  worker_socket_legacy.py  worker_tennis_legacy.py  worker_ufc_legacy.py  worker_umps_legacy.py
context_engineering/: AI Agent System Instruction Manual.md  Constitutional-Preamble-11292025-0757.md  Example_VertexAI_Constitution  diagnose-final-md.md  execute-md.md  strategize-final.md
docs/: Free Sports Data Harvesting Analysis.md  Sports Data Harvesting Report.md  debug_extraction.py  walkthrough.md
historic_context/: Building Billion-Dollar AI Business Free.txt  Business Idea Viability Report.txt  Constitution-Step1-Diagnose-11292025-0757.md  Constitution-Step2-Strategize-11292025-0757.md  (+48 more)
(+46 files in other folders)
